--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
     "react": "^16.9.0",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.9.0",
+    "react-dropzone": "^10.1.10",
+    "react-icons": "^3.8.0",
     "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
