--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "filesize": "^6.0.0",
     "google-maps-react": "^2.0.2",
     "lodash": "^4.17.15",
